Card alignment fixed. Button alignment still out.

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ a,
     display: flex;
     justify-content: center;
     flex-direction: row;
+    text-align: center;
     margin-top: 10px;
 }
 
@@ -167,7 +168,7 @@ a,
     font-size: 0.7em;
     font-weight: bold;
     line-height: 15px;
-    color: var(--secondary-color)
+    color: var(--secondary-color);
 }
 
 .description {
